--- a/inhaltsverzeichnis.html
+++ b/inhaltsverzeichnis.html
@@ -14,7 +14,7 @@
 <h1>Inhaltsverzeichnis</h1>
 
 <ul>
-    <li><a href="kapitel1.html">Erster Kapitel</a></li>
+    <li><a href="kapitel1.html">Name des Kapitels</a></li>
 </ul>
 
 </body>
